WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211200
Style is not applied when changed on the first line of a new mail message.
https://bugs.webkit.org/show_bug.cgi?id=211200
Summary
Style is not applied when changed on the first line of a new mail message.
Megan Gardner
Reported
2020-04-29 13:04:19 PDT
Style is not applied when changed on the first line of a new mail message.
Attachments
Patch
(1.42 KB, patch)
2020-04-29 13:05 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(6.38 KB, patch)
2020-04-30 18:26 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(7.80 KB, patch)
2020-05-01 16:30 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(7.91 KB, patch)
2020-05-01 16:31 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(10.38 KB, patch)
2020-05-01 16:36 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(8.89 KB, patch)
2020-05-04 14:20 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(8.87 KB, patch)
2020-05-04 17:56 PDT
,
Megan Gardner
darin
: review+
Details
Formatted Diff
Diff
Patch
(7.37 KB, patch)
2020-05-05 08:30 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2020-04-29 13:05:01 PDT
Comment hidden (obsolete)
Created
attachment 397990
[details]
Patch
Megan Gardner
Comment 2
2020-04-30 18:26:11 PDT
Comment hidden (obsolete)
Created
attachment 398131
[details]
Patch
Megan Gardner
Comment 3
2020-04-30 18:26:52 PDT
<
rdar://problem/62087514
>
Megan Gardner
Comment 4
2020-05-01 16:30:27 PDT
Comment hidden (obsolete)
Created
attachment 398258
[details]
Patch
Megan Gardner
Comment 5
2020-05-01 16:31:59 PDT
Comment hidden (obsolete)
Created
attachment 398259
[details]
Patch
Megan Gardner
Comment 6
2020-05-01 16:36:51 PDT
Comment hidden (obsolete)
Created
attachment 398260
[details]
Patch
Megan Gardner
Comment 7
2020-05-04 14:20:29 PDT
Comment hidden (obsolete)
Created
attachment 398413
[details]
Patch
Megan Gardner
Comment 8
2020-05-04 17:56:55 PDT
Comment hidden (obsolete)
Created
attachment 398448
[details]
Patch
Darin Adler
Comment 9
2020-05-04 23:37:41 PDT
Comment on
attachment 398448
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=398448&action=review
> LayoutTests/editing/execCommand/ios/first-line-text-attribute-change-presist-through-resigning-first-responder-expected.txt:3 > +U
This "U" line doesn’t seem to be present in the actual test output given what the EWS bot says.
Darin Adler
Comment 10
2020-05-04 23:43:03 PDT
Comment on
attachment 398448
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=398448&action=review
r=me after you get the test to pass on EWS; right now it’s failing
> Tools/WebKitTestRunner/cocoa/UIScriptControllerCocoa.mm:71 > +#if PLATFORM(MAC) > + [[webView() window] makeFirstResponder:nil]; > +#else > [webView() resignFirstResponder]; > +#endif
I don’t think you should land this Mac-only change as part of this patch, since the test is an iOS-only test. I assume it’s not needed to make some other test pass on Mac? I believe UIScriptControllerCocoa::becomeFirstResponder is also incorrect on Mac in the same sort of way. And should be fixed the same way, by calling [window makeFirstResponder:self]. Maybe not right now as part of this patch, though.
> LayoutTests/ChangeLog:10 > + * editing/execCommand/ios/first-line-text-attribute-change-presist-through-resigning-first-responder.html: Added.
Why is this an iOS-only test? I couldn't find anything iOS-specific in it.
Megan Gardner
Comment 11
2020-05-05 08:28:24 PDT
Comment on
attachment 398448
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=398448&action=review
>> LayoutTests/ChangeLog:10 >> + * editing/execCommand/ios/first-line-text-attribute-change-presist-through-resigning-first-responder.html: Added. > > Why is this an iOS-only test? I couldn't find anything iOS-specific in it.
It is the testing of resigningFirstResponder that is iOS specific. We do not resign at the same or similar times on Mac.
Megan Gardner
Comment 12
2020-05-05 08:30:30 PDT
Created
attachment 398511
[details]
Patch
EWS
Comment 13
2020-05-05 09:51:31 PDT
Committed
r261177
: <
https://trac.webkit.org/changeset/261177
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398511
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug