Style is not applied when changed on the first line of a new mail message. https://bugs.webkit.org/show_bug.cgi?id=211200 <rdar://problem/62087514>

Reviewed by Darin Adler.

Source/WebCore:

After r257487 when we resign first responder, we immediatly
update activity state. This means that if we resign first responder, and then
become first responder, we are clearing the selection if the caret is at the beginning
of the document, due to a check in setSelectionFromNone. This check was originally added
in 2006 because it happened to fix <rdar://problem/4483145>. Removing this check and
merging the iOS and Mac logic.

Test: editing/execCommand/ios/first-line-text-attribute-change-presist-through-resigning-first-responder.html

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::setSelectionFromNone):

LayoutTests:

* editing/execCommand/ios/first-line-text-attribute-change-presist-through-resigning-first-responder-expected.txt: Added.
* editing/execCommand/ios/first-line-text-attribute-change-presist-through-resigning-first-responder.html: Added.


Canonical link: https://commits.webkit.org/224350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261177 268f45cc-cd09-0410-ab3c-d52691b4dbfc